# gmail_ingestor

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PROMPT.md  README.md  SKILL.md  pyproject.toml
memory/: 2026-02-17.md  2026-02-23.md  2026-02-25.md  2026-02-27.md  2026-03-04.md
scripts/: cli.py
src/gmail_ingester/: __init__.py
src/gmail_ingester/config/: __init__.py  settings.py
src/gmail_ingester/core/: __init__.py  auth.py  converter.py  exceptions.py  gmail_client.py  models.py  parser.py
src/gmail_ingester/pipeline/: __init__.py  ingester.py
src/gmail_ingester/storage/: __init__.py  raw_store.py  tracker.py  writer.py
src/gmail_ingestor/: __init__.py
src/gmail_ingestor/config/: settings.py
src/gmail_ingestor/core/: auth.py  converter.py  exceptions.py  gmail_client.py  models.py  parser.py
src/gmail_ingestor/pipeline/: ingestor.py
src/gmail_ingestor/storage/: raw_store.py  tracker.py  writer.py
tests/: conftest.py  test_cli.py  test_converter.py  test_gmail_client.py  test_ingester.py  test_ingestor.py  test_models.py  test_parser.py  test_raw_store.py  test_tracker.py  test_writer.py
tests/fixtures/: multipart_alternative.json  multipart_mixed.json  simple_html.json  simple_text.json
